tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/set_host_header_multi_destination/a/to_b/_test_context/VirtualService.3354355543.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - b
  http:
  - route:
    - destination:
        host: b
      headers:
        request:
          set:
            Host: dest-authority
      weight: 50
    - destination:
        host: b
      headers:
        request:
          set:
            Host: dest-authority
      weight: 50
